[package]
name = "actix-http-test"
version = "0.2.1"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
description = "Actix http test server"
readme = "README.md"
keywords = ["http", "web", "framework", "async", "futures"]
homepage = "https://actix.rs"
repository = "https://github.com/actix/actix-web.git"
documentation = "https://docs.rs/actix-http-test/"
categories = ["network-programming", "asynchronous",
              "web-programming::http-server",
              "web-programming::websocket"]
license = "MIT/Apache-2.0"
exclude = [".gitignore", ".travis.yml", ".cargo/config", "appveyor.yml"]
edition = "2018"
workspace = ".."

[package.metadata.docs.rs]
features = []

[lib]
name = "actix_http_test"
path = "src/lib.rs"

[features]
default = []

# openssl
ssl = ["openssl", "actix-server/ssl", "awc/ssl"]

[dependencies]
actix-codec = "0.1.2"
actix-rt = "0.2.2"
actix-service = "0.4.0"
actix-server = "0.5.1"
actix-utils = "0.4.1"
awc = "0.2.1"

base64 = "0.10"
bytes = "0.4"
futures = "0.1"
http = "0.1.8"
log = "0.4"
env_logger = "0.6"
net2 = "0.2"
serde = "1.0"
serde_json = "1.0"
sha1 = "0.6"
slab = "0.4"
serde_urlencoded = "0.5.3"
time = "0.1"
tokio-tcp = "0.1"
tokio-timer = "0.2"
openssl = { version="0.10", optional = true }

[dev-dependencies]
actix-web = "1.0.0-rc"
actix-http = "0.2.3"
