[package]
name = "diesel-example"
version = "0.1.0"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
workspace = "../.."

[dependencies]
env_logger = "0.4"
actix = "0.4"
actix-web = { path = "../../" }

futures = "0.1"
uuid = { version = "0.5", features = ["serde", "v4"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

diesel = { version = "1.0.0-beta1", features = ["sqlite"] }
dotenv = "0.10"
