[package]
name = "diesel-example"
version = "0.1.0"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
workspace = "../.."

[dependencies]
env_logger = "0.5"
actix = "0.5"
actix-web = { path = "../../" }

futures = "0.1"
uuid = { version = "0.5", features = ["serde", "v4"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

diesel = { version = "1.0", features = ["sqlite"] }
r2d2 = "0.8"
r2d2-diesel = "1.0"
dotenv = "0.10"
