[package]
name = "json-example"
version = "0.1.0"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
workspace = "../.."

[dependencies]
bytes = "0.4"
futures = "0.1"
env_logger = "*"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
json = "*"

actix = { git = "https://github.com/actix/actix.git" }
actix-web = { path="../../" }
